--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/cities
+spring.datasource.username=postgres_user_city
+spring.datasource.password=super_password
 
